--- a/public/css/main.css
+++ b/public/css/main.css
@@ -141,7 +141,8 @@
 	width:100%;
 }
 
-.hide-header {
+.hide-tittle {
+
 	float:left;
 	width:95%;
 	height:50px;
@@ -152,8 +153,20 @@
 	width:5%;
 	text-align:center;
 	height:50px;
+	cursor: pointer;
 }
 
+.hide-arrow span {
+	float: left;
+	width: 75%;
+	font-size: 10px;
+	padding-top: 4px;
+}
+
+.hide-arrow div {
+	float: left;
+	width: 25%;
+}
 .hide-head {
 	height:50px;
 	width:100%;
@@ -166,7 +179,6 @@
 	width:100%;
 	display: block;
 }
-
 .hidden {
     display: none;
 }
