us40420: Filter component added. Observer modified to fire source as well. Test view added. Css added.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,3 +70,16 @@
 	float: left;
 }
 
+.dropDownDiv {
+    margin-right: 10px;
+    float: left;
+}
+
+.dropdown-button.dropdown {
+    display: inline-block;
+    background-color: lightgray;
+}
+.dropdown-button.dropdown.disabled {
+    background-color: lightcoral;
+}
+
