us40420: Divs' IDs added, minor changes in CSS

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,11 +75,48 @@
     float: left;
 }
 
+.dropDownDiv ul {
+    list-style-type: none;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+}
+
 .dropdown-button.dropdown {
     display: inline-block;
-    background-color: lightgray;
+    background-color: rgb(200,155,187);
+    padding: 2px;
+    color: rgb(30, 30, 30);
+    width: 60px;
+    font: 16px arial;
 }
 .dropdown-button.dropdown.disabled {
-    background-color: lightcoral;
+    background-color: lightgrey;
+    color: darkgray;
+}
+
+.dropDownItem {
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 5px 10px;
+    min-height: 10px;
+    white-space: nowrap;
+    text-align: left;
+    text-decoration: none;
+    background: purple;
+    color: white;
+    font: 12px arial;
+    border-bottom: solid 1px black;
+    width: 44px;
+}
+
+.dropDownItem:hover {
+    background-color: rgb(214, 210, 210);
+    color: purple;
+}
+
+.filtrable-task {
+    padding: 20px;
 }
 
