us40420: Divs' IDs added, minor changes in CSS

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,6 +73,14 @@
 .dropDownDiv {
     margin-right: 10px;
     float: left;
+    cursor: pointer;
+}
+
+.dropDownDiv ul {
+    list-style-type: none;
+    position: absolute;
+    margin: 0;
+    padding: 0;
 }
 
 .dropDownDiv ul {
