us40420: Cursor changed to pointer in CSS while on dropdown, handling empty dropdown moved from ComponentFilter to ComponentDropdown. Minor changes in code (some conditions removed).

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,6 +124,14 @@
     color: purple;
 }
 
+.dropDownItem.deselector {
+    background-color: darkslateblue;
+}
+
+.dropDownItem.deselector:hover {
+    background-color:  darkgray;
+}
+
 .filtrable-task {
     padding: 20px;
 }
