added dummy ManagerTaskList with task/teams/list endpoint
added modified queries for completed/not-completed tasks and end-points for ComponentManagerTaskList

changes in ViewTest - rebase on current develop

factory fo ManagerTaskList moved to factory file, querry for ManagerTaskList combined into one function for all variants

added strongly unoptimized :D function for parsing input data to filter dropdowns

made changes for adding grunt functionality from bdevelop and separated components into better folder structure

some corrections for grunt functionality after last commit

querry function for manager list altered

added filter, still WIP

filter functionality completely done

small fix on viewTest after rebase to bdevelop

added usage of notification center to userTaskDetail component

refactoring of tasks components WIP

added less file to ComponentBaseTaskDetail

alterations on refactoring, still WIP

refactoring of task lists done (without dropdowns on manager list for now)

added handling of finished tasks between two user lists

added filter functionality to manager list

added is_hr functionality to manager list, userTaskDetail now display email of the buddy properly

filter in manager list now displays all departments/teams in case, user is a HR

jade file added to ComponentBaseTaskDetail

alterations on queries for manager list, added lists on view home

corrections in code

more corrections to code and functionality

disabled button for finishing task, when task is finished

corrected DOM creation between TaskList and TaskListsInView components

removed completed parameter in taskList constructor, it was no longer needed

added task detail components in coffee script

frontend of taskList and all related components rewritten in coffee

corrections on back-end script after rebase

[us42892] corrections in code

[us42892] function getWrapper in baseDetail renamed

[us42892] correction in ComponentTaskListsInView constructor

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -6,15 +6,8 @@ body {
 	border: 2px solid;
 }
 
-.task-wrapper {
-	border: 2px solid;
-	width: 1000px;
-}
-
-.header-wrapper {
-	clear: none;
-	border-bottom: 2px solid;
-	height: 50px;
+.buddy-checkbox {
+    cursor: pointer;
 }
 
 .main-wrapper {
@@ -22,38 +15,25 @@ body {
   margin-top: 40px;
 }
 
-.buddy-label {
-	margin-right: 50px;
-}
-
-.time-label {
-	float: right;
-	background-color: #91FF6C;
-}
-
-.time-label-overflow {
-	float: right;
-	background-color: #FF4747;
-}
-
-.description-wrapper {
-	height: 200px;
-	width: 300px;
+.checkbox {
+	background-color: red;
+	width: 20px;
+	height: 20px;
 	float: left;
 }
 
-.notes-wrapper {
-	height: 200px;
-	border-left: 2px solid;
+.checked {
+	background-color: green;
+	width:20px;
+	height: 20px;
 	float: left;
 }
 
-.footer-wrapper {
-	clear: both;
-	height: 50px;
-	border-top: 2px solid;
+.checkbox-label {
+	width:100px;
+	height: 20px;
+	float: left;
 }
-
 
 .filtrable-task {
     padding: 20px;
