us42051: First version of notification center

--- a/public/js/components/componentNavBar.less
+++ b/public/js/components/componentNavBar.less
@@ -1,9 +1,14 @@
 #navbar{
   width: 100%;
-  height: auto;
+  height: 40px;
   min-height: 25px;
   background-color: #8d3be2;
   color: white;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 #navbar a{
