ComponentAddTask was edited

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -193,3 +193,11 @@
     display: inline-block;
     margin-right: 10%;
 }
+
+.invalid-input{
+  background: #ff0000;
+}
+
+input:focus{
+  background: #ffffff;
+}
