--- a/public/js/components/features/componentNotificationCenter.less
+++ b/public/js/components/features/componentNotificationCenter.less
@@ -37,14 +37,16 @@
   to   { opacity: 1; }
 }
 
-.notification-center .notification-neutral {
-  background-color: rgba(137, 165, 187, 0.71);
-}
+.notification-center {
+  .notification-neutral {
+    background-color: rgba(137, 165, 187, 0.71);
+  }
 
-.notification-center .notification-error {
-  background-color: rgba(255, 0, 0, 0.71);
-}
+  .notification-error {
+    background-color: rgba(255, 0, 0, 0.71);
+  }
 
-.notification-center .notification-success {
-  background-color: rgba(47, 222, 8, 0.71);
+  .notification-success {
+    background-color: rgba(47, 222, 8, 0.71);
+  }
 }
