ComponentAddTask and some other components + helper and bulk was edited. ComponentAddTask.jade was created. Some css from main.less was moved to separate *.less files

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -46,81 +46,11 @@
 	border-top: 2px solid;
 }
 
-.buddy-checkbox {
-    cursor: pointer;
-}
-
-
-.checkbox {
-	background-color: red;
-	width: 20px;
-	height: 20px;
-	float: left;
-}
-
-.checked {
-	background-color: green;
-	width:20px;
-	height: 20px;
-	float: left;
-}
-
-.checkbox-label {
-	width:100px;
-	height: 20px;
-	float: left;
-}
 
 .filtrable-task {
     padding: 20px;
 }
 
-.hide-comp {
-	float:left;
-	width:100%;
-}
-
-.hide-tittle {
-
-	float:left;
-	width:95%;
-	height:50px;
-}
-
-.hide-arrow {
-	float:left;
-	width:5%;
-	text-align:center;
-	height:50px;
-	cursor: pointer;
-}
-
-.hide-arrow span {
-	float: left;
-	width: 75%;
-	font-size: 10px;
-	padding-top: 4px;
-}
-
-.hide-arrow div {
-	float: left;
-	width: 25%;
-}
-.hide-head {
-	height:50px;
-	width:100%;
-	float:left;
-}
-
-
-.hide-content{
-	float:left;
-	width:100%;
-	display: block;
-}
-.hidden {
-    display: none;
-}
 
 .row div {
     display: inline-block;
@@ -133,9 +63,5 @@
 }
 
 .invalid-input{
-  background: #ff0000;
-}
-
-input:focus{
-  background: #ffffff;
+  border: 2px solid #ff0000 !important;
 }
