--- a/public/js/components/features/addTask/newTask/componentAddTask.less
+++ b/public/js/components/features/addTask/newTask/componentAddTask.less
@@ -1,13 +1,26 @@
-.tabbed-area{
-  border: 2px solid blue;
-  padding-bottom: 25px;
-}
+.new-task-wrapper {
 
-.new-task-person-wrapper{
-  border: 2px solid yellow;
-  padding-bottom: 25px;
-}
+  .tabbed-area {
+    border: 2px solid blue;
+    padding-bottom: 25px;
+  }
 
-.new-task-date-wrapper {
-  border: 2px solid yellow;
+  .new-task-person-wrapper {
+    border: 2px solid yellow;
+    padding-bottom: 25px;
+  }
+
+  .new-task-date-wrapper {
+    border: 2px solid yellow;
+  }
+
+  .date-label{
+    padding: 5px;
+    border: 2px solid red;
+  }
+
+  .task-length-label{
+    padding: 5px;
+    border: 2px solid blue;
+  }
 }
