ComponentEditUser, popup refactoring, userTable

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -73,3 +73,33 @@ body {
     list-style: none;
   }
 }
+
+.tasks {
+  font-size: x-large;
+
+  .done-tasks-count {
+    color: #31a800;
+  }
+
+  .undone-tasks-count {
+
+  }
+}
+
+.down-left-corner{
+  bottom: 0px;
+  right: 0px;
+  float: right;
+}
+
+.top-right-corner{
+  top: 0px;
+  left: 0px;
+}
+
+.departments-list{
+  li {
+    margin-bottom: 10px;
+    list-style: none;
+  }
+}
