--- a/public/js/components/componentEditUser.jade
+++ b/public/js/components/componentEditUser.jade
@@ -11,6 +11,7 @@ div(class=wrapperClass)
         div(class=userRoleWrapper)
         div(class=buddySelectWrapper)
     div(class=teamWrapper)
+    div(class=newTeamWrapper)
     div(class=buttonDiv)
         button(class=buttonSave)='Save'
         button(class=buttonCancel)='Cancel'
