--- a/public/js/components/features/componentCheckBox.less
+++ b/public/js/components/features/componentCheckBox.less
@@ -1,24 +1,27 @@
 .buddy-checkbox {
-  cursor: pointer;
+    cursor: pointer;
+    width: 250px;
+    height: 25px;
+    float: left;
+}
 
-  .checkbox {
+
+.checkbox {
     background-color: red;
     width: 20px;
     height: 20px;
     float: left;
-  }
+}
 
-  .checked {
+.checked {
     background-color: green;
     width:20px;
     height: 20px;
     float: left;
-  }
+}
 
-  .checkbox-label {
+.checkbox-label {
     width:100px;
     height: 20px;
     float: left;
-  }
 }
-
