--- a/public/js/components/componentNavBar.less
+++ b/public/js/components/componentNavBar.less
@@ -11,13 +11,30 @@
   right: 0;
 }
 
+#navbar-menu::before {
+  content: "| ";
+}
+
 #navbar a{
   color: white;
+  text-decoration: none;
+}
+
+#navbar-menu a::after {
+  content: " | ";
 }
 
 #navbar-user{
   float: right;
   background-color: #8d3be2;
+  position: fixed;
+  top: 0;
+  right: inherit;
+  text-align: right;
+}
+
+#navbar-user a {
+  display: block;
 }
 
 .navbar-menu-item{
