us42650 implicit tasks table finished
us42650 rebase on develop

fix develop

fix 2 develop

us42650 tablefactory rewrited to cf

--- a/public/js/components/features/addTask/newTask/componentAddTask.jade
+++ b/public/js/components/features/addTask/newTask/componentAddTask.jade
@@ -2,10 +2,8 @@ div(class=wrapperClass)
     div(class=personWrapperClass)
         span=personTitle
     div(class=bottomWrapperClass)
-        label(class=dateLabelClass)
-            span=dateTitle
+        label(class=dateLabelClass)=dateTitle
             input(class=dateInputClass, type="date", min=today, value=today)
-        label(class=taskLengthLabelClass)
-            span=taskLengthTitle
+        label(class=taskLengthLabelClass)=taskLengthTitle
             input(class=taskLengthInputClass, type="number", min=1)
     button(class=saveButtonClass)=saveButtonTitle
