--- a/public/js/components/features/componentCheckBox.less
+++ b/public/js/components/features/componentCheckBox.less
@@ -1,6 +1,6 @@
 .buddy-checkbox {
     cursor: pointer;
-    width: 250px;
+    width: auto;
     height: 25px;
     float: left;
 }
@@ -21,7 +21,7 @@
 }
 
 .checkbox-label {
-    width:100px;
+    width:auto;
     height: 20px;
     float: left;
 }
