us43497: Popup refactor

--- a/public/js/components/componentPopup.less
+++ b/public/js/components/componentPopup.less
@@ -1,4 +1,4 @@
-.popup-main {
+#popup-wrapper {
   z-index: -100;
   height: 100%;
   width: 100%;
@@ -10,7 +10,7 @@
   align-content: center;
 }
 
-.popup-main.popup-opened {
+#popup-wrapper.popup-opened {
   z-index: 100;
   display: block;
 }
