--- a/public/js/components/componentNavBar.less
+++ b/public/js/components/componentNavBar.less
@@ -1,4 +1,4 @@
-#navbar{
+.navbar {
   width: 100%;
   height: 40px;
   min-height: 25px;
@@ -9,47 +9,46 @@
   top: 0;
   left: 0;
   right: 0;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+#navbar {
+  .navbar;
 }
 
 #navbar-menu::before {
-  content: "| ";
+    content: "| ";
+}
+#navbar-menu{
+  a::after {
+    content: " | ";
+  }
 }
 
-#navbar a{
-  color: white;
-  text-decoration: none;
-}
-
-#navbar-menu a::after {
-  content: " | ";
-}
-
-#navbar-user{
+#navbar-user {
   float: right;
   background-color: #8d3be2;
   position: fixed;
   top: 0;
   right: inherit;
   text-align: right;
+  a {
+    display: block;
+  }
 }
-
-#navbar-user a {
-  display: block;
-}
-
-.navbar-menu-item{
+.navbar-menu-item {
   float: none;
   display: inline;
 }
 
-.navbar-menu{
-  float: none;
-}
-
-#navbar-name{
+#navbar-name {
   margin-right: 10px;
 }
 
-#login-button{
+#login-button {
   float: right;
 }
+
