[us43822] corrections in coffee code (router, routerConfig)

--- a/public/js/components/componentNavBar.jade
+++ b/public/js/components/componentNavBar.jade
@@ -9,9 +9,9 @@ if loggedIn
                     .navbar-menu-item Tasks
                 a(href="#people")
                     .navbar-menu-item People
-                a(href="#template")
+                a(href="#templates")
                     .navbar-menu-item Templates
-                a(href="#implicit")
+                a(href="#implicit_tasks")
                     .navbar-menu-item Implicit Tasks
                 a(href="#departments")
                     .navbar-menu-item Departments
