eventType refactor + ComponentAddTask and ComponentEditUser messages were placed into a object messages + ComponentTabbedArea renamed to ComponentContentSwitcher

--- a/public/js/components/componentEditUser.jade
+++ b/public/js/components/componentEditUser.jade
@@ -1,17 +1,17 @@
-div(class=wrapperClass)
-    div(class=userInfoWrapper)
+div.edit-user
+    div.user-info-wrapper
         label="Name:"
-        input(class=inputName, type="text")
+        input.input-name(type="text")
         br
         label="Surname:"
-        input(class=inputSurname, type="text")
+        input.input-surname(type="text")
         br
         label="Email"
-        input(class=inputEmail, type="email")
-        div(class=userRoleWrapper)
-        div(class=buddySelectWrapper)
-    div(class=teamWrapper)
-    div(class=newTeamWrapper)
-    div(class=buttonDiv)
-        button(class=buttonSave)='Save'
-        button(class=buttonCancel)='Cancel'
+        input.input-email(type="email")
+        div.user-role-wrapper
+        div.buddy-select-wrapper
+    div.team-wrapper
+    div.new-team-wrapper
+    div.buttons-wrapper
+        button.button-save='Save'
+        button.button-cancel='Cancel'
