--- a/public/js/components/componentNavBar.less
+++ b/public/js/components/componentNavBar.less
@@ -2,7 +2,7 @@
   width: 100%;
   height: 40px;
   min-height: 25px;
-  background-color: #8d3be2;
+  background-color: #253036;
   color: white;
 
   position: fixed;
