us42567 added cursor:pointer above sortable columns

--- a/public/js/components/table/componentTable.less
+++ b/public/js/components/table/componentTable.less
@@ -51,6 +51,7 @@
 
 .sortable {
   padding-left: 5px;
+  cursor: pointer;
 }
 
 .ASC::before {
@@ -73,5 +74,9 @@
 
 .DESC.active-sort::before {
   border-top: 5px solid red;
+}
+
+.load-more{
+  cursor: pointer;
 }
 
