ComponentAddImplicitTask was created

--- a/public/js/components/features/addTask/newTask/componentAddTask.jade
+++ b/public/js/components/features/addTask/newTask/componentAddTask.jade
@@ -1,6 +1,7 @@
 div(class=wrapperClass)
     div(class=personWrapperClass)
         span="Person: "
+    div(class=contentSwitcherDiv)
     div(class=bottomWrapperClass)
         label.date-label="Task starts at: "
             input(class=dateInputClass, type="date", min=today, value=today)
