--- a/public/css/main.less
+++ b/public/css/main.less
@@ -16,8 +16,6 @@ body {
   margin: 50px;
   color : #fff;
   background-color: @body-background;
-
-
 }
 
 .view-wrapper {
@@ -143,3 +141,25 @@ button{
   background-color:  @button-home-add-task;
 }
 
+.buttonFn(@background, @border) {
+  border: 1px solid @border;
+  border-radius: 15px;
+  display: inline;
+  padding: 5px 15px;
+  color: rgb(255,255,255);
+  font-weight: bold;
+  cursor: pointer;
+  background-color: @background;
+}
+
+.button {
+  .buttonFn(rgb(20, 29, 34), rgb(46, 58, 65));
+}
+
+.button.active {
+  background-color: rgb(37, 48, 54);
+}
+
+.button-blue {
+  .buttonFn(rgb(19, 158, 225), rgb(34, 174, 242));
+}
