ComponentAddImplicitTask CR + true/false in whole project changed to yes/no

--- a/public/js/components/features/addTask/newImplicitTask/componentAddImplicitTask.jade
+++ b/public/js/components/features/addTask/newImplicitTask/componentAddImplicitTask.jade
@@ -1,7 +1,7 @@
-div(class=wrapperClass)
+div.add-implicit-task
 	div(class=contentSwitcherDiv)
 	div(class=selectorsDiv)
-	div(class=bottomWrapperClass)
+	div.bottom-wrapper
 		label.start-label="Task starts at: "
 			input(class=startInputClass, type="number", min=1)
 		label.task-length-label="Task length (days): "
