us46095 fixed active class, bt-button change to button
all js deleted

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -127,7 +127,7 @@ button{
   background-color: @button-bg ;
   color: @button-text-color;
 }
-.bt-button{
+.button{
   border: 1px solid @button-home-border;
   border-radius: 25px;
   padding: 5px 10px 5px 10px;
