commit to squash (invalid date problem during unfinish task)

--- a/public/js/components/tasks/taskDetails/componentBaseTaskDetail.less
+++ b/public/js/components/tasks/taskDetails/componentBaseTaskDetail.less
@@ -25,6 +25,7 @@
 			z-index: 10;
 
 			.title-div {
+				color: #000000;
 				width: @task-wrapper-width - (@deadline-info-size + 25px);
 				.task-label {
 					font-size: @task-title-font-size;
